--- a/Programmierung/ServerDatenbrille/app/src/main/res/values/string_preferences.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/values/string_preferences.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="preferences_category_datapoints">Datenpunkte ??</string>
-
     <!-- GPS -->
     <string name="preferences_category_gps">GPS</string>
     <string name="preferences_preference_gps_enabled">GPS ein/aus</string>
@@ -55,9 +53,28 @@
     <string name="preferences_category_qrcode">QR - Code</string>
     <string name="preferences_preference_qrcode_enabled">GPS ein/aus</string>
     <bool name="preferences_preference_qrcode_enabled_default">true</bool>
-
+    <!-- Datenpakete -->
     <string name="preferences_category_datapackages">Datenpakete</string>
     <string name="preferences_preference_museen_enabled">Museen ein/aus</string>
     <bool name="preferences_preferences_museen_enabled_default">true</bool>
-
+    <!-- WIFI -->
+    <string name="preferences_category_wifi">WLAN - Hotspot</string>
+    <string name="preferences_preference_wifihotspot_name">Name</string>
+    <string name="preferences_preference_wifihotspot_name_default">Datenbrille</string>
+    <string name="preferences_preference_wifihotspot_password">Passwort</string>
+    <string name="preferences_preference_wifihotspot_password_default">Passwort1!</string>
+    <!-- Scrolling -->
+    <string name="preferences_category_scroll">Brillensteuerung</string>
+    <string name="preferences_preference_scroll_distance_per_click">Prozent pro Klick</string>
+    <string-array name="preferences_preference_scroll_distance_per_click_entries">
+        <item>1%</item>
+        <item>2%</item>
+        <item>5%</item>
+    </string-array>
+    <string-array name="preferences_preference_scroll_distance_per_click_values">
+        <item>1</item>
+        <item>2</item>
+        <item>5</item>
+    </string-array>
+    <string name="preferences_preference_scroll_distance_per_click_default">2</string>
 </resources>
