--- a/Programmierung/ServerDatenbrille/app/src/main/res/xml/preference.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/xml/preference.xml
@@ -39,4 +39,25 @@
             android:key="@string/preferences_preference_museen_enabled"
             android:title="@string/preferences_preference_museen_enabled" />
     </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/preferences_category_wifi">
+        <EditTextPreference
+            android:defaultValue="@string/preferences_preference_wifihotspot_name_default"
+            android:key="@string/preferences_preference_wifihotspot_name"
+            android:title="@string/preferences_preference_wifihotspot_name" />
+        <EditTextPreference
+            android:defaultValue="@string/preferences_preference_wifihotspot_password_default"
+            android:key="@string/preferences_preference_wifihotspot_password"
+            android:title="@string/preferences_preference_wifihotspot_password" />
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/preferences_category_scroll">
+        <ListPreference
+            android:defaultValue="@string/preferences_preference_scroll_distance_per_click_default"
+            android:entries="@array/preferences_preference_scroll_distance_per_click_entries"
+            android:entryValues="@array/preferences_preference_scroll_distance_per_click_values"
+            android:key="@string/preferences_preference_scroll_distance_per_click"
+            android:title="@string/preferences_preference_scroll_distance_per_click" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
