QR-Code into ActionBar Removed QR-Code on/off Setting QR-Code parent Activity to MainActivity Prototype (not working) of a WifiHotspot Settings to TabbedMenu

--- a/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_first_controlling.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_first_controlling.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_first_controlling_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/fragment_first_controlling_layout" >
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tvScrollIndex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/tvScrollIndex"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ImageView
+        android:id="@+id/ivArrowTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ivArrowTop"
+        android:layout_above="@+id/tvScrollIndex"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/arrowtop"
-        android:layout_above="@+id/tvScrollIndex"
-        android:contentDescription="@string/arrow_description"/>
+        android:contentDescription="@string/arrow_description"
+        android:src="@drawable/arrowtop" />
 
     <ImageView
+        android:id="@+id/ivArrowBottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ivArrowBottom"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/arrowbottom"
         android:layout_below="@+id/tvScrollIndex"
-        android:contentDescription="@string/arrow_description"/>
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/arrow_description"
+        android:src="@drawable/arrowbottom" />
 </RelativeLayout>
