--- a/Programmierung/ServerDatenbrille/app/src/main/res/values/string_preferences.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/values/string_preferences.xml
@@ -47,12 +47,8 @@
     <string name="preferences_preference_gps_viewmaxdistance_default">10</string>
     <!-- NFC -->
     <string name="preferences_category_nfc">NFC</string>
-    <string name="preferences_preference_nfc_enabled">GPS ein/aus</string>
+    <string name="preferences_preference_nfc_enabled">NFC ein/aus</string>
     <bool name="preferences_preference_nfc_enabled_default">true</bool>
-    <!-- QR -->
-    <string name="preferences_category_qrcode">QR - Code</string>
-    <string name="preferences_preference_qrcode_enabled">GPS ein/aus</string>
-    <bool name="preferences_preference_qrcode_enabled_default">true</bool>
     <!-- Datenpakete -->
     <string name="preferences_category_datapackages">Datenpakete</string>
     <string name="preferences_preference_museen_enabled">Museen ein/aus</string>
@@ -77,4 +73,10 @@
         <item>5</item>
     </string-array>
     <string name="preferences_preference_scroll_distance_per_click_default">2</string>
+
+    <string name="back_button_label">Zurück</string>
+    <string name="next_button_label">Weiter</string>
+    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
+    <string name="skip_button_label">Überspringen</string>
+
 </resources>
