--- a/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_second_datapoints.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_second_datapoints.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ExpandableListView
-        android:id="@+id/datapointList"
+    <ListView
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
+    <!-- DONT CHANGE THE ID! -->
 </LinearLayout>
