Changed List to PackageList

--- a/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_second_datapoints.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_second_datapoints.xml
@@ -7,7 +7,13 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
-    <!-- DONT CHANGE THE ID! -->
+        android:id="@+id/addPackageButton"
+        android:text="@string/add_Package"
+        android:layout_weight="0" />
 </LinearLayout>
