--- a/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_second_datapoints_listviewrow.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/layout/fragment_second_datapoints_listviewrow.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/icon"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/no_image_available" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/tvName" />
 
     <TextView
-        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/icon"
-        android:gravity="center_vertical"
-        android:textSize="@dimen/list_item_textSize" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/tvKey" />
 
-</RelativeLayout>
+</LinearLayout>
