--- a/Programmierung/ServerDatenbrille/app/src/main/res/menu/main_activity_actions.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/menu/main_activity_actions.xml
@@ -13,4 +13,10 @@
         android:title="Sync"
     />
 
+    <item
+        android:id="@+id/gps_action"
+        android:icon="@drawable/gps_location"
+        android:showAsAction="always"
+        android:title="GPS"/>
+
 </menu>
