--- a/Programmierung/ServerDatenbrille/app/src/main/res/xml/preference.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/xml/preference.xml
@@ -19,6 +19,28 @@
             android:entryValues="@array/preferences_preference_gps_viewmaxdistance_values"
             android:key="@string/preferences_preference_gps_viewmaxdistance"
             android:title="@string/preferences_preference_gps_viewmaxdistance" />
+        <ListPreference
+            android:defaultValue="@string/preferences_preference_gps_update_interval_default"
+            android:dependency="@string/preferences_preference_gps_enabled"
+            android:entries="@array/preferences_preference_gps_update_interval_entries"
+            android:entryValues="@array/preferences_preference_gps_update_interval_values"
+            android:key="@string/preferences_preference_gps_update_interval"
+            android:title="@string/preferences_preference_gps_update_interval" />
+        <ListPreference
+            android:defaultValue="@string/preferences_preference_gps_fastest_interval_default"
+            android:dependency="@string/preferences_preference_gps_enabled"
+            android:entries="@array/preferences_preference_gps_fastest_interval_entries"
+            android:entryValues="@array/preferences_preference_gps_fastest_interval_values"
+            android:key="@string/preferences_preference_gps_fastest_interval"
+            android:title="@string/preferences_preference_gps_fastest_interval" />
+        <ListPreference
+            android:defaultValue="@string/preferences_preference_gps_displacement_default"
+            android:dependency="@string/preferences_preference_gps_enabled"
+            android:entries="@array/preferences_preference_gps_displacement_entries"
+            android:entryValues="@array/preferences_preference_gps_displacement_values"
+            android:key="@string/preferences_preference_gps_displacement"
+            android:title="@string/preferences_preference_gps_displacement" />
+
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/preferences_category_nfc">
         <CheckBoxPreference
