progress dialog fixed

--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings_crawler.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings_crawler.xml
@@ -5,7 +5,7 @@
     <string name="crawler_load_packageinfo">Lade Packetinformationen herunter</string>
     <string name="crawler_add_packageinfo">Füge Packetinformationen hinzu</string>
     <string name="crawler_add_datapoint">Füge Datenpunkte hinzu</string>
-    <string name="craalwer_datapoint">Datenpunkt</string>
+    <string name="crawler_datapoint">Datenpunkt</string>
     <string name="crawler_unzip">Entpacke Packetinformationen</string>
 
 </resources>
