--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/menu/main.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/menu/main.xml
@@ -12,4 +12,9 @@
         android:showAsAction="ifRoom"
         android:title="Sync" />
 
+    <item
+        android:id="@+id/debug_action"
+        android:title="Debug"/>
+
+
 </menu>
