--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/layout/fragment_datapoints.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/layout/fragment_datapoints.xml
@@ -4,11 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@android:id/list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" >
+
+        </ListView>
+
+
+       </LinearLayout>
+
 
     <Button
         android:layout_width="match_parent"
